--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
       "es2018",
       "dom"
     ]
+    ,"paths":
+    {
+      "@app/*":["src/app/*"],
+      "@environments/*": ["src/environments/*"]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
